final revision part 1 and 2 and monitor tool

--- a/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
+++ b/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
@@ -4,17 +4,19 @@
 
 Monitoring **Dynamics 365** or **Model Driven Applications** is not a new concept. Understanding where services are failing, users are running into errors, where form and business processes could be tuned for performance are key drivers for most if not all businesses, from small companies to enterprises. Luckily, the **Dynamics 365** platform provides many tools to help audit and monitor business and operational events.
 
-This article will cover collecting, querying and analyzing user interface events, specifically from the [recently announced Monitor Tool for Model Driven Apps](https://powerapps.microsoft.com/en-us/blog/monitor-now-supports-model-driven-apps/). The previous article covered message data points and how to perceive them. In this go round, we will  have a little fun exploring ways to utilize the output sessions. We will discuss how to build robust work items in **Azure DevOps** with **Monitor** output. We'll look at consuming and storing outputs for visualizations and analytics with **Kusto** queries. Finally, samples will be provided to parse and load session messages into **Azure Application Insights** and **Azure Log Analytics**.
+This article will cover user events and where they are sourced from. From there, we will dive into the **Monitor** tool and look at individual messages within. We will work with a few sample scenarios and see what we can gain from markers and messages within the **Monitor** tool.
 
-## Collecting User Interface Events
+## Collecting User Events
 
-Before we discuss techniques on how to capture events in **Dynamics 365** let's examine some meaningful events. From the client perspective this may include performance counters and metrics, user click events and navigation as well as geolocations and preferences of users. For server side, external integrations and execution context contain identifiers for response codes that may require additional validation.
+Before we discuss techniques on how to capture events in **Dynamics 365** let's examine some meaningful events. From the client perspective this may include **performance counters and metrics, user click events and navigation**. Other data points include **geolocations and preferences** of users. Luckily, client events are easier to capture and we have many **tools including browser based** (Developer Tools) to **applications** (Fiddler) that are readily available. **<u>Some features of the platform allow for collecting markers while other events of interest we will have to supplement with custom delivery mechanisms.</u>** 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/ReadySlides.206.MeaningfulEvents.PNG" style="zoom: 80%;" />
+For server side, external integrations and execution context contain identifiers for response codes that may require additional validation. For sandboxed plug-ins and custom workflow activities, we are limited somewhat to what tools we can leverage.
 
-Some features of the platform allow for collecting markers while other events of interest we will have to supplement with custom delivery mechanisms. Upcoming articles will detail how to collect and push events of interest to a central area for analytics.
+Upcoming articles will detail how to collect and push events of interest to a central area for analytics.
 
 **<u>NOTE:</u>** The rest of this article will cover collecting and analyzing messages focused on the client. That said, server side events play a major role and can impact the client experience. I'll address server side events in another article pertaining to **Azure Application Insights** and **Model Driven Apps**. In the meantime, [check out this GitHub repo that includes experimental Plug-In code](https://github.com/aliyoussefi/D365-Monitoring).
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/ReadySlides.206.MeaningfulEvents.PNG" style="zoom: 80%;" />
 
 ### The Monitor Tool
 
@@ -32,25 +34,25 @@ After consenting or allowing to start a session, the **Monitor** tool will light
 
 ## Key Performance Indicators
 
-Key Performance Indicators represent major lifecycle events within a particular user action, such as loading a form. Consider the image below.
+**Key Performance Indicators** represent major lifecycle events within a particular user action, such as loading a form. Consider the image below.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/FormLoad-KPIs.PNG" style="zoom: 80%;" />
 
-By sorting the records on "KPI", these events begin to emerge. The image below shows the major lifecycle events or KPIs for a standard form load within Dynamics 365. Beginning with PageNavigationStart and ending with RenderedEditReady, these events represent the completion of a Key Performance Indicator.
+By sorting the records on the "***KPI***" category, these events begin to emerge. The image below shows the major lifecycle events or KPIs for a standard form load within **Dynamics 365**. Beginning with ***PageNavigationStart*** and ending with ***RenderedEditReady***, these events represent the completion of a form load.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/KPI-HighLevel.PNG" style="zoom: 80%;" />
 
 ### Scenario: Determining a Form's Load Impact
 
-Consider the scenario of a user logging into the system and opening a lead form for the first time. When performing this action the form and data have not had a chance to be cached or stored locally which results in all items needed to be downloaded. This is sometimes referenced as a cold load. Reviewing the timeline event "**FullLoad**" we can determine what type of load the form rendered as.
+Consider the scenario of a user logging into the system and opening a lead form for the first time. When performing this action, the form and data have not had a chance to be cached or stored locally which results in all items needed to be downloaded. This is sometimes referenced as a ***cold load***. Reviewing the timeline event "**FullLoad**" we can determine what type of load the form rendered as.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/Dynamics/D365-FormLoad-ColdLoad-JSON.JPG)
 
-Now, once captured, the user opens the fly out window to choose another lead record but using the same form. Again using the "**FullLoad**" KPI timeline event we can see the ***LoadType*** is now **two**.
+Now, once captured, the user opens the fly out window to choose another lead record but using the same form. Again using the "**FullLoad**" KPI timeline event we can see the ***LoadType*** is now **Two**.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/Dynamics/D365-FormLoad-WarmLoad-JSON.JPG)
 
-Finally, imagine the user needs to navigate back to the original lead record opened on the same form. We can see now the ***LoadType*** is now **three**. Comparing this to the ***LoadType*** 0 image above, the **entityId** is the same.
+Finally, imagine the user needs to navigate back to the original lead record opened on the same form. We can see now the ***LoadType*** is now **Three**. Comparing this to the ***LoadType*** **Zero** image above, the **entityId** is the same.
 
 Here is a sample scenario in full showing the differences in loading new and existing records and how changing a form can impact network requests to the server.
 
@@ -58,69 +60,61 @@ Here is a sample scenario in full showing the differences in loading new and exi
 
 ## Attribution
 
-On certain **Key Performance Indicators** a property is included called "***Attribution***" which represents specific lifecycle events. This includes the commands or actions included within a KPI. For example, during a form load lifecycle, controls are rendered, ribbon rule are evaluated, onload event handlers are executed, etc. The Attribution property will specify and group,in chronological order, which events happened. An added bonus is the duration is also shown for each event along with if any synchronous calls were made. Consider the image below.
+On certain **Key Performance Indicators** a property is included called "***Attribution***" which represents specific lifecycle events. **<u>This includes the commands or actions executed within a KPI.</u>** For example, during a form load lifecycle, **controls are rendered, ribbon rule are evaluated, onload event handlers are executed**, etc. The **Attribution** property will specify and group, in chronological order, which events happened. An added bonus is **the duration is also shown for each event along with if any synchronous calls were made**. Consider the image below.
 
 ### Scenario: Locating dynamically added form changes and events
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/FullLoad.Attrition.PNG" style="zoom: 80%;" />
 
-The image above shows for the ***FullLoad*** KPI. In this image we see three main groups of events: CustomControl (form controls), Rule Evaluation (ribbon rules) and onload (form event handlers). What's interesting here is each of these is grouped, but also the solution they are part of and event solution layering is present. The RuleEvaluation and onload groups above both show an unmanaged or "Active" layer that contained customizations.
+The image above shows for the ***FullLoad*** KPI. In this image we see three main groups of events: ***CustomControl*** (form controls), Rule Evaluation (ribbon rules) and onload (form event handlers). What's interesting here is each of these is grouped, but also the solution they are part of and event solution layering is present. The ***RuleEvaluation*** and ***onload*** groups above both **<u>show an unmanaged or "Active" layer</u>** that contained customizations.
 
 Compare that image with the one below.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Attribution.PNG" style="zoom: 80%;" />
 
-A scenario came up during an investigation into the an increased duration of a form save. To begin, we went through the user events as normal with the Monitor Tool running.
+A scenario came up during an investigation into the an increased duration of a form save. To begin, we went through the user events as normal with the **Monitor** tool running.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Message.MonitorTool.PNG" style="zoom: 80%;" />
 
-Upon review, you can see additional events occurred, *tabstatechanged* and *onsave*. The onsave was expected due to the registered event handler on the form. **<u>However the tabstatechange was not, this was found to be due to a recent code addition that triggered the setDisplayState of the tab.</u>** 
+Upon review, you can see additional events occurred, ***tabstatechanged*** and ***onsave***. The ***onsave*** was expected due to the registered event handler on the form. **<u>However the tabstatechange was not, this was found to be due to a recent code addition that triggered the setDisplayState of the tab.</u>** 
 
-```
-if (control.getName() == tabName) {
-	control.setDisplayState("expanded");
-}
-```
-
-By reviewing the Attribution property we were able to identify what caused the increase of 5 seconds.
+By reviewing the **Attribution** property we were able to identify what caused the **<u>increase of 5 seconds</u>**.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Attribution.TabStateChanged.PNG" style="zoom: 80%;" />
 
 ## Zone Activity and Other Data Points
 
-Within Key Performance Indicators, are other data points that prove useful when debugging performance related issues. Latency and Throughput are shown as well as timings for network related calls and custom script executions.
+Within **Key Performance Indicators**, are other data points that prove useful when debugging performance related issues. ***Latency*** and ***Throughput*** are shown as well as **<u>timings for network related calls and custom script executions</u>**. Within the ***ZoneActivity*** property we see events grouped by web service calls, [browser resource timings](https://developer.mozilla.org/en-US/docs/Web/API/Resource_Timing_API/Using_the_Resource_Timing_API) and [performance observer](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceObserver) events. The ***CustomScriptTime*** shows the duration of all of the registered event handlers that fired during this particular **Key Performance Indicator**.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.MessageDetail.MonitorTool.PNG" style="zoom: 80%;" />
 
-[Performance Observer](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceObserver)
-
 ## Performance Messages
 
-Performance categorized messages detail potential performance issues that a user may run into. At the time of this writing, I've uncovered only synchronous XHR calls being sent but I anticipate growth here.
+Performance categorized messages detail **<u>potential performance issues that a user may run into</u>**. At the time of this writing, I've uncovered only synchronous XHR calls being sent but I anticipate growth here.
 
 ### Scenario: Locating and Evaluating Synchronous Resource Timings
 
-Requests from a Model Driven App represent outgoing calls from the client to another source. These calls can occur either synchronously meaning the thread executing the call waits for the response, or asynchronously meaning the thread continues and listens for the response. Its preferred to eliminate all sync calls to reduce any potential disruption to a user's experience within the application.
+Requests from a **Model Driven Application** represent outgoing calls from the client to another source. These calls can occur either **synchronously** meaning the <u>thread executing the call waits for the response</u>, or **asynchronously** meaning the thread <u>continues and listens for the response</u>. **<u>Its preferred to eliminate all sync calls to reduce any potential disruption to a user's experience within the application.</u>**
 
-The Monitor tool helps by identifying these requests and calling them out. These call outs can be found in the "Performance" category as shown below.
+The **Monitor** tool helps by identifying these requests and calling them out. These call outs can be found in the "***Performance***" category as shown below.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/Performance.SyncCall-Full.PNG" style="zoom: 80%;" />
 
-Examining the performance entry, we can see the "dataSource" property shows the XmlHttpRequest URL. However, it doesn't show the source of the call which is needed to better understand how and why the request was made. For that, we need to find the 
+Examining the performance entry, **we can see the "*dataSource*" property shows the XmlHttpRequest URL**. However, it doesn't show the source of the call which is needed to better understand how and why the request was made. **For that, we need to find and examine KPIs such as FullLoad or SaveForm.**
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/Performance.SyncCall-Xhr-sync-property.PNG" style="zoom: 80%;" />
 
-Here is a gif showing how to use the Monitor tool, coupled with the Browser Developer Tools to locate the line of code that needs to be updated.
+Here is a gif showing how to use the **Monitor** tool, coupled with the **Browser Developer Tools** to locate the line of code that needs to be updated.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/FullLoad-Perf-SyncXhr.gif" style="zoom: 80%;" />
 
- Using these messages, along with outputs from Power Apps Checker, we can begin to uncover gaps in code analysis. In the next article, I'll cover in depth an approach to help identify and remediate these gaps.
+ Using these messages, along with outputs from **Power Apps Checker**, we can begin to uncover gaps in code analysis. [In the next article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-model-driven-apps---the-monitor-tool-part-2-session-consumption-and-analytics), I'll cover in depth an approach to help identify and remediate these gaps.
 
 ## Next Steps
 
 In this article we have covered how to work with the **Monitor** tool output files. **<u>Viewing within Power BI Dashboards, attaching to DevOps work items and storing in Azure backed log stores are all possibilities.</u>** Included [sample code](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/master/Samples) and **Kusto** queries to help you get started have also been provided.
 
-This article showcases use cases and strategies for working with the **Monitor** tool but really only represents the tip of the iceberg. Continue collecting, examining and churning the output for deep insight into user and platform trends.
+This article describes where user and platform events may originate from and how they can be monitored. Gaining insights and understanding into the SaaS version of **Dynamics 365** allows us to uncover the black box and find answers to some of our questions. **<u>Think about how the Monitor tool can be used to find out where API calls may have started and coupled with other articles in this series, how we can correlate to provide a true end to end monitoring solution.</u>** [The next article in this series](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-model-driven-apps---the-monitor-tool-part-2-session-consumption-and-analytics) will cover how we can extract and analyze the sessions further.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
