--- a/docs/02.03 - The Monitor Tool Part 2- Session Consumption and Analytics.md
+++ b/docs/02.03 - The Monitor Tool Part 2- Session Consumption and Analytics.md
@@ -175,7 +175,7 @@ pageViews
 
 [Azure Function and Azure Application Insights - Monitor Tool Extractor](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/master/Samples/ModelApps/MonitorToolExtractor)
 
-Power Automate and Azure Log Analytics
+[Power Automate and Azure Log Analytics](https://github.com/aliyoussefi/MonitoringPowerPlatform/blob/master/Samples/PowerAutomate/LogAnalytics/MonitorToolOutputtoLogAnalytics_20200813221745.zip)
 
 [Optional Azure Application Insights Custom Connector](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/master/Samples/AzureFunction/MonitoringWithApplicationInsights)
 
