ado notificatons and subscriptions update

--- a/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
+++ b/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
@@ -30,7 +30,7 @@ After consenting or allowing to start a session, the **Monitor** tool will light
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/RowDetailFullLoad.PNG" style="zoom: 80%;" />
 
-[Jesse Parsons'](https://powerapps.microsoft.com/en-us/blog/author/jeparson/) article on the **Monitor Tool**, titled ['**Monitor now supports model-driven apps**'](https://powerapps.microsoft.com/en-us/blog/monitor-now-supports-model-driven-apps/) provides a through deep dive including sample scenarios. **<u>I highly suggest reviewing and keeping close by for reference.</u>**
+[Jesse Parsons'](https://powerapps.microsoft.com/en-us/blog/author/jeparson/) article on the **Monitor Tool**, titled [**Monitor now supports model-driven apps**](https://powerapps.microsoft.com/en-us/blog/monitor-now-supports-model-driven-apps/) provides a through deep dive including sample scenarios. **<u>I highly suggest reviewing and keeping close by for reference.</u>**
 
 ## Key Performance Indicators
 
@@ -100,7 +100,7 @@ The **Monitor** tool helps by identifying these requests and calling them out. T
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/Performance.SyncCall-Full.PNG" style="zoom: 80%;" />
 
-Examining the performance entry, **we can see the "*dataSource*" property shows the XmlHttpRequest URL**. However, it doesn't show the source of the call which is needed to better understand how and why the request was made. **For that, we need to find and examine KPIs such as FullLoad or SaveForm.**
+Examining the performance entry, **we can see the "*dataSource*" property shows the XHR URL**. However, it doesn't show the source of the call which is needed to better understand how and why the request was made. **For that, we need to find and examine KPIs such as FullLoad or SaveForm.**
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/Performance.SyncCall-Xhr-sync-property.PNG" style="zoom: 80%;" />
 
