--- a/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
@@ -117,11 +117,47 @@ Reference:
 
 
 ## Pipelines
-### Build Pipelines
+### Environments
+
+[Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for targeted deployment of artifacts to a collection of resources. In the case of the Power Platform, this can be thought of a release to an Power Platform environment. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions. Using the [Azure DevOps REST API for Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0) we can evaluate both...mostly.
+
+[https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment records/list?view=azure-devops-rest-6.0)
+
+#### Deployment History and Security Checks
+
+Environments allow DevOps administrators the ability to review and manage deployments. With this control also comes auditing of previous deployments allowing insight into trends and potential vulnerabilities. Each attempted deployment to an environment includes [an execution record](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0#environmentdeploymentexecutionrecord) that can expose [stage](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/stages?view=azure-devops&tabs=yaml) (orchestrations and divisions) and [job](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/phases?view=azure-devops&tabs=yaml) (sequential tasks) details.
+
+<insert execution record image>
+
+Each deployment, that meets security checks, will be included within the execution record REST API list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. As of this writing, the ability to read pending deployments awaiting checks such as approvals is not straight forward. That said, using Web Hooks, as discussed in the Web Hooks section of the article "", we can see acknowledgement of a pending approval. In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the REST API.
+
+### Builds
 
 Build Pipeline has capabilities to review analytics from an API. This allows us to request for each build not only the logs and timings but how the build compares to previous builds. From this we can conclude if our builds are trending in the right direction and if not, what can we do to course correct.
 
-Below is a list of the Azure DevOps REST API operations I find useful:
+
+
+
+
+### Artifacts
+
+[https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get%20file?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get file?view=azure-devops-rest-6.0)
+
+
+
+### Logs
+
+Gathering build logs are important to allow administrators to track the status, the timings and the actions performed by a build. Within each build, logs are collected for every action, which can be extracted using the getbuildlog REST API command. 
+
+https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20log?view=azure-devops-rest-5.1
+
+## Tests
+
+
+
+## References
+
+Below is a list of the Azure DevOps REST API operations for **Builds** I find useful:
 
 | API Definition                                               | Comments                                                     |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
@@ -135,7 +171,33 @@ Below is a list of the Azure DevOps REST API operations I find useful:
 | Code                                                         |                                                              |
 | [Fetch Code Search Results](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/status/get?view=azure-devops-rest-5.1) |                                                              |
 
+Below is a list of the Azure DevOps REST API operations for **Tests** I find useful:
 
+| API Definition                                               | Comments                                                     |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| [Builds](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/Builds/Get?view=azure-devops-rest-5.1) | Helps gather build summaries to quickly identify anomalies.  |
+| [Get Build Logs](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20log?view=azure-devops-rest-5.1) | Helps capture logs for specific builds for troubleshooting and performance monitoring. |
+| [Get Build Changes](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20changes?view=azure-devops-rest-5.1) | Helps identify code changes within a specific build.         |
+| [Get Changes Between Builds](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20changes%20between%20builds?view=azure-devops-rest-5.1) | Helps identify code changes between builds.                  |
+| [Get Build Report](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/report/get?view=azure-devops-rest-5.1) | Helps capture the generated build report in html or json formats. |
+| Get Build Definitions                                        |                                                              |
+| [Get Build Definition Metrics](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/metrics/get%20definition%20metrics?view=azure-devops-rest-5.1) |                                                              |
+| Code                                                         |                                                              |
+| [Fetch Code Search Results](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/status/get?view=azure-devops-rest-5.1) |                                                              |
+
+Below is a list of the Azure DevOps REST API operations for **Environments** I find useful:
+
+| API Definition                                               | Comments                                                    |
+| ------------------------------------------------------------ | ----------------------------------------------------------- |
+| [Builds](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/Builds/Get?view=azure-devops-rest-5.1) | Helps gather build summaries to quickly identify anomalies. |
+| [Get Build Changes](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20changes?view=azure-devops-rest-5.1) | Helps identify code changes within a specific build.        |
+
+Below is a list of the Azure DevOps REST API operations for **Tests** I find useful:
+
+| API Definition                                               | Comments                                                     |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| [Builds](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/Builds/Get?view=azure-devops-rest-5.1) | Helps gather build summaries to quickly identify anomalies.  |
+| [Get Build Logs](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20log?view=azure-devops-rest-5.1) | Helps capture logs for specific builds for troubleshooting and performance monitoring. |
 
 
 
