--- a/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
@@ -117,6 +117,8 @@ Reference:
 
 
 ## Pipelines
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.Sources.PNG" style="zoom:50%;" />
+
 ### Environments
 
 [Environments](https://docs.microsoft.com/en-us/azure/devops/pipelines/process/environments?view=azure-devops) in Azure DevOps allow for targeted deployment of artifacts to a collection of resources. In the case of the Power Platform, this can be thought of a release to an Power Platform environment. The use of pipeline environments is optional, that is unless you begin work using Release pipelines which do require environments. Two of the main advantages of environments are deployment history and security and permissions. Using the [Azure DevOps REST API for Environments](https://docs.microsoft.com/en-us/rest/api/azure/devops/distributedtask/environmentdeployment%20records/list?view=azure-devops-rest-6.0) we can evaluate both...mostly.
@@ -129,27 +131,47 @@ Environments allow DevOps administrators the ability to review and manage deploy
 
 <insert execution record image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
+
 Each deployment, that meets security checks, will be included within the execution record REST API list. If the deployment is not found, most likely it is awaiting or failed a specific conditional check. As of this writing, the ability to read pending deployments awaiting checks such as approvals is not straight forward. That said, using Web Hooks, as discussed in the Web Hooks section of the article "", we can see acknowledgement of a pending approval. In this scenario we can be notified, other checks currently do not allow for flexibility. Feel free to upvote this request to gain traction on adding this to the REST API.
 
 ### Builds
 
 Build Pipeline has capabilities to review analytics from an API. This allows us to request for each build not only the logs and timings but how the build compares to previous builds. From this we can conclude if our builds are trending in the right direction and if not, what can we do to course correct.
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
 
 
+#### Build Changes
+
+ddd
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.DevOpsGUI.PNG"  />
+
+PowerShell Example:
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/RestApi.GetBuildChanges.PowerShell.PNG" style="zoom:50%;" />
+
+#### Build Work Items
+
+ddd
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
 ### Artifacts
 
 [https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get%20file?view=azure-devops-rest-6.0](https://docs.microsoft.com/en-us/rest/api/azure/devops/build/artifacts/get file?view=azure-devops-rest-6.0)
 
-
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
 ### Logs
 
 Gathering build logs are important to allow administrators to track the status, the timings and the actions performed by a build. Within each build, logs are collected for every action, which can be extracted using the getbuildlog REST API command. 
 
 https://docs.microsoft.com/en-us/rest/api/azure/devops/build/builds/get%20build%20log?view=azure-devops-rest-5.1
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
 ## Tests
 
