updated API doc

--- a/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using APIs.md
@@ -143,7 +143,7 @@ Build Pipeline has capabilities to review analytics from an API. This allows us 
 
 
 
-#### Build Changes
+#### Build Changes and Work Items
 
 ddd
 
